--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -4,7 +4,6 @@ body{
 
 header{
     font-size: 48px;
-    font-style: italic;
     color: white;
     background-color: #f5cc53;
     display: flex;
